# SYNC-STUDY

./: .gitignore  app.json  package-lock.json  package.json
.playwright-cli/: page-2026-07-13T12-18-49-395Z.yml  page-2026-07-13T12-20-07-601Z.yml  page-2026-07-13T12-20-53-618Z.yml  page-2026-07-13T12-20-57-741Z.yml
agent-service/: .env.example  .gitignore  README.md  agent_api.py  agent_memory.db  agent_memory.db-shm  agent_memory.db-wal  hitl_agent.py  langchain_agent.py  main.py  pyproject.toml  request_hitl_agent.py  state_graph_basics.py  state_graph_llm_and_tool.py  state_graph_llm_router.py  state_graph_react_toolnode.py  state_graph_task_hitl.py  test_longcat.py  test_longcat_tools.py  user_memory.db
agent-service/sync_study_agent/: __init__.py  api.py  backend_client.py  config.py  runtime.py
agent-service/tests/: __init__.py  test_agent_capabilities.py  test_agent_service.py  test_backend_client.py
backend/sync-study-backend/: pom.xml
src/app/: _layout.tsx  exam-plan-detail.tsx  exam-plan.tsx  explore.tsx  guest.tsx  index.tsx  login.tsx  mood.tsx  onboarding.tsx  persona-builder.tsx  persona.tsx  register.tsx  role-select.tsx  study-calendar.tsx  today-tasks.tsx
src/components/: add-today-task-modal.tsx  animated-icon.tsx  animated-icon.web.tsx  date-picker-modal.tsx  mood-face.tsx  newbie-task-modal.tsx  study-check-in-modal.tsx  web-badge.tsx
src/constants/: exam-plan-card.ts
src/lib/: account-avatar.ts  agent-api.ts  api-client.ts  auth-api.ts  auth-session.ts  exam-plan-api.ts  learning-goal-api.ts  mood-api.ts  mood.ts  persona-profile.ts  (+2 more)
(+114 files in other folders)
