[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
]
