[project]
name = "agent-service"
version = "0.1.0"
description = "LangGraph chat service for SYNC-STUDY"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "httpx>=0.28.1",
    "openai>=2.45.0",
    "python-dotenv>=1.2.2",
]
